fix: overflow of logos in footer & footer link arrow visibility fix on iOS devices

--- a/assets/sass/_media.scss
+++ b/assets/sass/_media.scss
@@ -343,6 +343,8 @@ $x-small: 420px;
       &--mobile {
         position: relative;
         display: flex;
+        gap: 24px;
+        overflow: auto;
       }
     }
     &__logo {
